syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.springdatabasicdemo.grpc";
option java_outer_classname = "InspectedPersonProtos";
option optimize_for = SPEED;

import "google/protobuf/empty.proto";

package inspectedPerson;

service InspectedPersonService {
  rpc AllInspectedPerson (google.protobuf.Empty) returns (AllInspectedPersonResponse);
  rpc GetInspectedPerson (GetInspectedPersonRequest) returns (GetInspectedPersonResponse);
}

message GetInspectedPersonRequest {
  int64 id = 1;
}

message GetInspectedPersonResponse {
  InspectedPerson inspected_person = 1;
}

message AllInspectedPersonResponse {
  repeated InspectedPerson inspected_persons = 1;
}

message InspectedPerson {
  int64 id = 1;
  string name = 2;
  string passport_number = 3;
  bool checked = 4;
}
